--- a/sites/all/modules/custom/scratchpads/scratchpads_species/css/scratchpads_species.css
+++ b/sites/all/modules/custom/scratchpads/scratchpads_species/css/scratchpads_species.css
@@ -4,7 +4,7 @@
 
 /* Nomenclature block */
 
-.view-species-nomenclature .item-list ul li{
+.view .item-list ul li{
   line-height: 2em;
   margin: 0;
 }
