Update specimen overview block

--- a/sites/all/modules/custom/scratchpads/scratchpads_species/css/scratchpads_species.css
+++ b/sites/all/modules/custom/scratchpads/scratchpads_species/css/scratchpads_species.css
@@ -52,3 +52,13 @@
 .view-species-slideshow .views-field-filename span {
     padding: 0 10px;
 }
+
+#block-views-species-specimens-block .view-content{
+  display: inline-block;
+  width: 65%;
+}
+
+#block-views-species-specimens-block .view-footer{
+  display: inline-block;
+  width: 30%;
+}
