--- a/sites/all/modules/custom/scratchpads/scratchpads_species/css/scratchpads_species.css
+++ b/sites/all/modules/custom/scratchpads/scratchpads_species/css/scratchpads_species.css
@@ -55,10 +55,8 @@
 
 #block-views-species-specimens-block .view-content{
   display: inline-block;
-  width: 65%;
 }
 
 #block-views-species-specimens-block .view-footer{
-  display: inline-block;
-  width: 30%;
+  float:right;
 }
