--- a/sites/all/modules/custom/slickgrid/css/slickgrid.css
+++ b/sites/all/modules/custom/slickgrid/css/slickgrid.css
@@ -1,6 +1,7 @@
-.slickgrid-wrapper{
+.slickgrid-wrapper, .bt-content{
   font-size: 10px!important;
   position: relative;
+  font-family: "Lucida Grande", Verdana, Arial, Helvetica, sans-serif;
 }
 
 .slickgrid-wrapper #controls, 
@@ -47,7 +48,7 @@
 .slick-header,
 .slick-header-columns{
   /* Give header bar a basic grey fill for when there's no columns */
-  background: #E3E3E3!important;
+  background: #E8E8E8!important;
 
 }
 
@@ -68,51 +69,28 @@
 .slick-header-column.ui-state-default,
 .slick-header-column.ui-state-hover,
 .slick-header-column:hover{
-  background: url('../images/header-bg.png') repeat-x!important;
-  border-right-color: #949494;
-  border-left-color: #fff;
+  background: #E8E8E8;
+  border-right-color: #E8E8E8;
+  border-left-color: #E8E8E8;
 }
 
-/* Show a hover sort icon to indicate this column can be sorted */
-.slick-header-column.ui-state-hover span.slick-sort-indicator,
-.slick-header-column:hover span.slick-sort-indicator{
-  background: url('../images/sort-asc-hover.gif') no-repeat;
-}
-
-.slick-header-column.ui-state-default .slick-resizable-handle{
-  right: 3px;
-  background: url('../images/resize-handle.gif') no-repeat 0 9px;
-  
-}
-
-/* Selected column state */
-
-.slick-header-column.slick-header-column-sorted{
-  background: url('../images/header-active-bg.png') repeat-x!important;
-  border-right-color: #1872B6;
-  border-left-color: #78D0FE;
-  color: #fff;
-}
-
-.slick-header-column.slick-header-column-sorted span.slick-sort-indicator.slick-sort-indicator-desc{
-  background: url('../images/sort-desc-active.png') no-repeat;
-}
-
-.slick-header-column.slick-header-column-sorted span.slick-sort-indicator.slick-sort-indicator-asc{
-  background: url('../images/sort-asc-active.png') no-repeat;
-}
-
-.slick-header-column.slick-header-column-sorted .slick-resizable-handle{
-  background-image: url('../images/resize-handle-active.png')
-}
 
 /************************** FILTER BAR ************************/
+
+#slickgrid-toggle-search-panel{
+  position: absolute;
+  right: 2px;
+  z-index: 100;
+  top: 39px;
+  cursor: pointer;
+}
 
 .slick-headerrow{
   background: #cfcfcf!important;
   border: none!important;
   height: 30px;
   border-bottom: 1px solid #A5A5A5!important;
+  display: none;
 }
 
 .slick-headerrow .slick-headerrow-column{
@@ -123,28 +101,15 @@
 
 /* text filter boxes */
 
-.slick-headerrow .slick-headerrow-column span.slickgrid-filter-textFilter{
-  background: url('../images/text-filter-left.png') no-repeat top left;
-  display: block;
-}
-
-.slick-headerrow .slick-headerrow-column span.slickgrid-filter-textFilter span{
-  background: url('../images/text-filter-right.png') no-repeat top right;
-  padding-right: 8px;
-  height: 21px;
-  display: block;
-  margin-left: 18px;
-  padding-left: 3px;
-  margin-top: 4px;
-}
-
 .slick-headerrow .slick-headerrow-column span.slickgrid-filter-textFilter span input{
-  border: none;
-  height: 13px;
+  border: 1px solid #949494;
+  height: 20px;
   line-height: 8px;
   width: 100%;
   font-size: 10px;
   padding: 0;
+  margin-top: 4px;
+  border-radius:8px;
 }
 
 /**************************** VIEWPORT & CELLS  ***************************/
@@ -159,6 +124,7 @@
   border-right-style: solid;
   padding-left: 4px;
   padding-right: 4px;
+  line-height: 2em;
 }
 
 input.editor-text {
@@ -186,8 +152,8 @@ input.editor-text {
 
 /* Rows */
 
-.grid-canvas div.odd{
-  background: #F7F7F7!important;
+.grid-canvas div.odd div.slick-cell{
+  background: #F1F5FA;
 }
 
 /* Groups */
@@ -224,18 +190,26 @@ span.grouping-field-count{
 /* Selected rows */
 
 div.slick-cell-checkboxsel{
-  background: #E3E3E3!important;
+  background: #EFEFEF!important;
+  line-height: 14px;
 }
 
 div.slick-cell-checkboxsel.selected{
-  background: #CFCFCF!important;
+  background: #E3E3E3!important;
 }  
 
 
 div.slick-cell-checkboxsel input,
 .slick-column-name input[type='checkbox']{
-  margin-left: 3px;
-  margin-top: 6px;
+  margin-left: 2px;
+}
+
+div.slick-cell-checkboxsel input{
+  margin-top: 5px;  
+}
+
+.slick-column-name input[type='checkbox']{
+  margin-top: 0;
 }
 
 .slick-cell.selected,
@@ -254,11 +228,9 @@ div.slick-cell-checkboxsel input,
 /* Resizable handle */
 
 #slickgrid .ui-resizable-handle.ui-resizable-s{
-  background: #E0E0E0 url('../images/viewport-resize-handle.png') no-repeat center;  
-  border-top: 1px solid #A5A5A5;
   bottom: 0;
-  height: 6px;
-  z-index: 0;
+  height: 5px;
+  z-index: 100;
 }
 
 
@@ -266,7 +238,7 @@ div.slick-cell-checkboxsel input,
 
 #controls{
   height: 30px;
-  background: #CECECE url('../images/header-bg.png') repeat-x;
+  background: #E8E8E8;
   overflow: hidden;
   padding: 0;
 }
@@ -279,7 +251,6 @@ div.slick-cell-checkboxsel input,
   text-align: center;
   height: 26px;
   min-width: 30px;
-  border-left: 1px solid #B2B2B2;  
   margin-left: 5px;
 }
 
@@ -313,8 +284,9 @@ div.slick-cell-checkboxsel input,
 .slickgrid-dialog h6{
   font-size: 1.2em;
   color: inherit!important;
-  margin-top: 0!important;
+  margin: 0 0 5px 0!important;
   font-weight: bold;
+  font-family: "Lucida Grande", Verdana, Arial, Helvetica, sans-serif;
 }
 
 .slickgrid-dialog button{
@@ -322,7 +294,7 @@ div.slick-cell-checkboxsel input,
 }
 
 .slickgrid-dialog input{
-  display: block;
+  margin-right: 8px;
 }
 
 .slickgrid-dialog input#export-selected-rows{
@@ -410,8 +382,8 @@ ul.slickgrid-messages li ul li{
 /* Modal popup (edit and add) */
 
 .ctools-slickgrid-modal-content .modal-header{
-  background: #DCDCDC url("../images/header-bg.png") bottom repeat-x!important; 
-  line-height: 30px;
+  background: #E8E8E8!important; 
+  line-height: 26px;
   border-bottom: 1px solid #949494;
 }
 
@@ -421,9 +393,9 @@ ul.slickgrid-messages li ul li{
 }
 
 div.ctools-modal-content a.close img{
-  left: 34px!important;
-  bottom: 0!important;
-  margin-top: -2px;
+  right: -22px!important;
+  top: 3px!important;
+  position: absolute!important;
 }
 
 div.ctools-modal-content{
