--- a/sites/all/themes/scratchpads/css/global.css
+++ b/sites/all/themes/scratchpads/css/global.css
@@ -16,18 +16,36 @@ body{
   padding-bottom: 20em;
 }
 
-
-
 #section-footer{
   position:absolute;
   bottom: 0;
   width: 100%;
-
-/*height: 4em;*/
-
 }
 
 /* Typography */
+
+@font-face {
+    font-family: 'FontinSansBoldItalic';
+    src: url('../fonts/FontinSans_49/fontin_sans_bi_45b-webfont.eot');
+    src: url('../fonts/FontinSans_49/fontin_sans_bi_45b-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/FontinSans_49/fontin_sans_bi_45b-webfont.woff') format('woff'),
+         url('../fonts/FontinSans_49/fontin_sans_bi_45b-webfont.ttf') format('truetype'),
+         url('../fonts/FontinSans_49/fontin_sans_bi_45b-webfont.svg#FontinSansBoldItalic') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'FontinSansRegular';
+    src: url('../fonts/FontinSans_49/fontin_sans_r_45b-webfont.eot');
+    src: url('../fonts/FontinSans_49/fontin_sans_r_45b-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/FontinSans_49/fontin_sans_r_45b-webfont.woff') format('woff'),
+         url('../fonts/FontinSans_49/fontin_sans_r_45b-webfont.ttf') format('truetype'),
+         url('../fonts/FontinSans_49/fontin_sans_r_45b-webfont.svg#FontinSansRegular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
 
 body, h2.block-title{
     font: 12px/1.5 Verdana,Helvetica,Arial,sans-serif;
@@ -50,8 +68,10 @@ h1, h2, h3, h4, h5, h6{
   font-weight: normal!important;
 }
 
-h1{
-	font-family: Georgia, serif;
+h1, 
+h1.site-name, 
+h2.site-name{
+	font-family: 'FontinSansRegular', Georgia, serif;
 	letter-spacing: 0.5px;
 	font-size: 3em;
 	line-height: 1.2em;
