Fixed home page images

--- a/sites/all/modules/custom/scratchpads/scratchpads_front/css/scratchpads_front.css
+++ b/sites/all/modules/custom/scratchpads/scratchpads_front/css/scratchpads_front.css
@@ -3,14 +3,17 @@
 /* Slideshow */
 
 .view-front-page-slideshow{
-  padding: 1px;
+/*  padding: 1px;*/
   background: #fff;
-  width: 778px;
 }
 
 .view-front-page-slideshow .views-slideshow-pager-field-item img{
-  margin-left: 1px;
+  margin-right: 1px;
   margin-bottom: 1px;
+}
+
+#views_slideshow_pager_field_item_bottom_front_page_slideshow-default_3 img{
+  margin-right: 0!important;
 }
 
 .view-front-page-slideshow #views_slideshow_pager_field_item_bottom_home_page_slideshow-block_1_3 img{
@@ -20,6 +23,8 @@
 .view-front-page-slideshow .views_slideshow_cycle_main{
   float: left;
   position: relative;
+  margin-right: 1px;
+  margin-bottom: 1px;
 }
 
 .view-front-page-slideshow .views-field-filename{
@@ -33,6 +38,15 @@
 
 .view-front-page-slideshow .views-field-filename span{
   padding: 0 10px;
+}
+
+/* Slideshow controls */
+.views-slideshow-pager-field-item{
+  float: left;
+}
+
+.views-slideshow-controls-bottom{
+  min-width: 620px;
 }
 
 /* Large text block */
