--- a/sites/all/modules/custom/scratchpads/scratchpads_search_block/css/scratchpads_search_block.css
+++ b/sites/all/modules/custom/scratchpads/scratchpads_search_block/css/scratchpads_search_block.css
@@ -1,48 +1,12 @@
-.scratchpads-search-block-fieldset fieldset {
-	border: solid 1px #C1C1C1;
-	border-top:none;
-	width: 278px;
-	position: absolute;
-	margin: 2px 0 0 0;
-	padding: 0 0 10px 0;
-	/*-moz-border-radius-bottomright: 10px;
-	border-bottom-right-radius: 10px;
-	-moz-border-radius-bottomleft: 10px;
-	border-bottom-left-radius: 10px;*/
-  z-index:10;	
+.scratchpads-search-block-input .form-type-radios{
+  padding-top: 10px;
 }
 
-.scratchpads-search-block-fieldset fieldset.collapsed {
-	height: 0 !important;
-  z-index:10;
+.scratchpads-search-block-input .form-type-radios .form-type-radio{
+  display: inline!important;
+  margin: 0 20px 0 0!important;
 }
 
-.scratchpads-search-block-fieldset fieldset legend {
-	position: absolute;
-	top: 0;
-  z-index:10;
-}
-
-.scratchpads-search-block-fieldset fieldset legend a {
-	color: white;
-	text-decoration:none;
-	font-weight:700;
-  z-index:10;
-}
-
-.scratchpads-search-block-fieldset .fieldset-wrapper {
-  background-color:inherit;
-	padding: 20px 0 0 0;
-	margin: 5px;
-  z-index:10;
-}
-
-.scratchpads-search-block-fieldset .form-type-radio{
-	z-index:10;
-	width: 130px;
-	float:left;
-	padding:2px 0 0 4px;
-	Overflow:hidden;
-	font-size:80%;
-	color:white;
+.scratchpads-search-block-input .form-type-radios .form-type-radio label{
+  color: #fff;
 }
