--- a/sites/all/modules/custom/scratchpads/scratchpads_search_block/css/scratchpads_search_block.css
+++ b/sites/all/modules/custom/scratchpads/scratchpads_search_block/css/scratchpads_search_block.css
@@ -4,9 +4,19 @@
 
 .scratchpads-search-block-input .form-type-radios .form-type-radio{
   display: inline!important;
-  margin: 0 20px 0 0!important;
+  margin: 0 20px 0 0!important;  
 }
 
 .scratchpads-search-block-input .form-type-radios .form-type-radio label{
-  color: #fff;
+  color: #fff; 
+  cursor: pointer;
+}
+
+#autocomplete{
+  border: 1px solid #ACACAC;
+}
+
+#autocomplete ul li{
+  padding: 2px 4px;
+  cursor: pointer;  
 }
