--- a/sites/all/modules/custom/eolapi/css/eolapi.css
+++ b/sites/all/modules/custom/eolapi/css/eolapi.css
@@ -1,40 +1,7 @@
-.view-eol-images .view-content div {
-	margin: 0;
-	padding: 0;
-	float: left;
-  margin: 0 10px 10px 0;
-  border: 1px solid #999999;
+.view-eol-images .view-content div h2, .view-eol-text .view-content div h2 {
+    display: none;
 }
-.view-eol-images .view-content:after{
-	clear: both;
-	content: ".";
-	display: block;
-	height: 0;
-	visibility: hidden;
-}
-.view-eol-images .view-content div h2,.view-eol-text .view-content div h2{
-	display:none;
-}
-.view-eol-text>div>div{
-	border: solid 1px #eee;
-	padding:5px;
-	margin:5px;
-}
-.view-eol-text>div>div hr{
-  height:0px;
-  width:90%;
-  border:none;
-  border-top: dotted 1px #ddd;
-}
-.view-eol-text li, .view-eol-text ul{
-  padding-top:0 !important;
-  margin-top:0 !important;	
-  padding-bottom:0 !important;
-  margin-bottom:0 !important;
-}
-.view-eol-text{
-	font-size:90%;
-}
-.eolapi-text-hidden-block{
-	/*display:none;*/
+
+.block-eol-text-block .block-inner{
+  background: #fff url('../images/eol-logo.gif') no-repeat 0 45px;
 }
