--- a/sites/all/modules/contrib/field_group/field_group.css
+++ b/sites/all/modules/contrib/field_group/field_group.css
@@ -1,24 +1,22 @@
-@CHARSET "UTF-8";
+/* $Id: field_group.css,v 1.1.2.12 2010/12/22 22:22:35 stalski Exp $ */
 
 /**
- * Override for fieldsets in vertical tabs.
- * All legends where displayed none, breaking the 
- * nested field_group formatters.
+ * Fix for fieldsets in vertical tabs.
+ * Note that this can only be hardcoded to the Seven theme
+ * where people who override this, are in trouble.
  */
-.vertical-tabs legend {
+.vertical-tabs fieldset.default-fallback,
+div.field-group-tabs-wrapper div.field-type-image fieldset,
+div.field-group-tabs-wrapper div.field-type-file fieldset,
+div.field-group-tabs-wrapper div.field-type-datetime fieldset {
+   border: 1px solid #CCCCCC;
+   margin: 1em 0;
+   padding: 2.5em 0 0;
+   position: relative;
+}
+
+div.field-group-tabs-wrapper div.field-type-image legend,
+div.field-group-tabs-wrapper div.field-type-file legend,
+div.field-group-tabs-wrapper div.field-type-datetime legend {
   display: block;
-}
-.vertical-tabs-pane>legend {
-  display: none;
-}
-
-/**
- * Override the accordion default style for view_modes.
- */
-form .ui-accordion h3, form .ui-accordion h3.ui-state-active {
-  padding-left: 2em;
-}
-
-.ui-accordion h3.ui-state-active {
-  background: url("misc/ui/images/ui-bg_glass_75_e6e6e6_1x400.png") repeat-x scroll 50% 50% #E6E6E6;
 }
