--- a/sites/all/modules/custom/scratchpads/scratchpads_front/css/scratchpads_front.css
+++ b/sites/all/modules/custom/scratchpads/scratchpads_front/css/scratchpads_front.css
@@ -3,7 +3,6 @@
 /* Slideshow */
 
 .view-front-page-slideshow{
-/*  padding: 1px;*/
   background: #fff;
 }
 
@@ -66,4 +65,22 @@
 
 .view-front-page-blocks li p{
   margin: 5px 0;
+}
+
+/* Responsive */
+.responsive-layout-normal .views_slideshow_cycle_main img,
+.responsive-layout-normal .views-slideshow-cycle-main-frame,
+.responsive-layout-normal .views-slideshow-cycle-main-frame-row,
+.responsive-layout-narrow .views_slideshow_cycle_main img,
+.responsive-layout-narrow .views-slideshow-cycle-main-frame,
+.responsive-layout-narrow .views-slideshow-cycle-main-frame-row{
+  width: 492px!important;
+  height: 368px!important;
+}
+
+
+.responsive-layout-narrow .views_slideshow_pager_field_item img,
+.responsive-layout-normal .views_slideshow_pager_field_item img{
+  width: 112px!important;
+  height: 91px!important;
 }
