--- a/sites/all/modules/custom/scratchpads/scratchpads_species/css/scratchpads_species.css
+++ b/sites/all/modules/custom/scratchpads/scratchpads_species/css/scratchpads_species.css
@@ -19,6 +19,10 @@
   font-weight: bold;
 }
 
+#block-views-species-nomenclature-block ul{
+  margin-bottom: 0;
+}
+
 /* Slideshow */
 
 .view-species-slideshow .view-wrapper{
