Temporary fix for the overlay scroll issue when displayed over taxon pages.

--- a/sites/all/modules/custom/scratchpads/scratchpads_species/css/scratchpads_species.css
+++ b/sites/all/modules/custom/scratchpads/scratchpads_species/css/scratchpads_species.css
@@ -1,5 +1,7 @@
 @CHARSET "UTF-8";
 
+body{position:static !important;}
+
 /***************** Overview page *******************/
 
 /* Nomenclature block */
