--- a/sites/all/themes/scratchpads_admin/override.css
+++ b/sites/all/themes/scratchpads_admin/override.css
@@ -12,6 +12,52 @@
 	background: none;
 }
 
+/* Admin content table */
+
+table.scratchpads-admin-content  caption{
+  text-align: left;
+  font-size: 1.2em;
+  padding: 5px 0;
+}
+
+table.scratchpads-admin-content th.scratchpads-admin-content-operations{
+  width: 180px;
+}
+
+table.scratchpads-admin-content th.scratchpads-admin-content-stats{
+  width: 100px;
+}
+
+table.scratchpads-admin-content th.scratchpads-admin-content-operations,
+table.scratchpads-admin-content th.scratchpads-admin-content-stats,
+table.scratchpads-admin-content td:nth-child(2),
+table.scratchpads-admin-content td:nth-child(3){
+  text-align: center;
+}
+
+table.scratchpads-admin-content td{
+  vertical-align: middle;
+}
+
+table.scratchpads-admin-content td .item-list li{
+  display: inline;
+  padding: 0 4px;
+  border: none;
+}
+
+table.scratchpads-admin-content tr td:nth-child(1){
+  padding-left: 55px;
+  background-image: url("images/icons.png");
+  background-repeat: no-repeat;
+  background-position: 12px 50%;
+  height: 50px!important;
+}
+
+/* VBO tables */
+#views-form-admin-node-page table tr td.views-field-edit-node a,
+#views-form-admin-file-page table tr td.views-field-fid a{
+  margin: 0 5px;
+}
 
 /* Help system */
 
@@ -57,6 +103,6 @@
   text-decoration: underline;
 }
 
-.js #overlay-content .region-help{
+.js .region-help{
   display: none;
 }
